// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main Menu - WebApp Button Position (P0) buyer menu: exactly 1 WebApp button at top, 0 other URL buttons: buyer-menu-no-shop 1`] = `
{
  "inline_keyboard": [
    [
      {
        "hide": false,
        "text": "Открыть приложение",
        "web_app": {
          "url": "https://959f17dd7fc7.ngrok-free.app",
        },
      },
    ],
    [
      {
        "callback_data": "seller:create_shop",
        "hide": false,
        "text": "Создать магазин",
      },
    ],
    [
      {
        "callback_data": "buyer:search",
        "hide": false,
        "text": "Найти магазин",
      },
    ],
    [
      {
        "callback_data": "buyer:subscriptions",
        "hide": false,
        "text": "Мои подписки",
      },
    ],
    [
      {
        "callback_data": "buyer:orders",
        "hide": false,
        "text": "Мои заказы",
      },
    ],
    [
      {
        "callback_data": "role:toggle",
        "hide": false,
        "text": "Сменить роль",
      },
    ],
  ],
}
`;

exports[`Main Menu - WebApp Button Position (P0) main menu (role selection) has NO WebApp buttons: main-menu-role-selection 1`] = `
{
  "inline_keyboard": [
    [
      {
        "callback_data": "role:buyer",
        "hide": false,
        "text": "Я покупаю",
      },
      {
        "callback_data": "role:seller",
        "hide": false,
        "text": "Я продаю",
      },
    ],
  ],
}
`;

exports[`Main Menu - WebApp Button Position (P0) seller menu without shop: exactly 1 WebApp button if buyer role opened: buyer-menu-after-toggle 1`] = `
{
  "inline_keyboard": [
    [
      {
        "hide": false,
        "text": "Открыть приложение",
        "web_app": {
          "url": "https://959f17dd7fc7.ngrok-free.app",
        },
      },
    ],
    [
      {
        "callback_data": "seller:create_shop",
        "hide": false,
        "text": "Создать магазин",
      },
    ],
    [
      {
        "callback_data": "buyer:search",
        "hide": false,
        "text": "Найти магазин",
      },
    ],
    [
      {
        "callback_data": "buyer:subscriptions",
        "hide": false,
        "text": "Мои подписки",
      },
    ],
    [
      {
        "callback_data": "buyer:orders",
        "hide": false,
        "text": "Мои заказы",
      },
    ],
    [
      {
        "callback_data": "role:toggle",
        "hide": false,
        "text": "Сменить роль",
      },
    ],
  ],
}
`;

exports[`Main Menu - WebApp Button Position (P0) seller menu: exactly 1 WebApp button at top, 0 other URL buttons: seller-menu-with-shop 1`] = `
{
  "inline_keyboard": [
    [
      {
        "hide": false,
        "text": "Открыть приложение",
        "web_app": {
          "url": "https://959f17dd7fc7.ngrok-free.app",
        },
      },
    ],
    [
      {
        "callback_data": "seller:active_orders",
        "hide": false,
        "text": "Активные заказы",
      },
    ],
    [
      {
        "callback_data": "seller:order_history",
        "hide": false,
        "text": "История заказов",
      },
    ],
    [
      {
        "callback_data": "seller:tools",
        "hide": false,
        "text": "🔧 Инструменты",
      },
    ],
    [
      {
        "callback_data": "role:toggle",
        "hide": false,
        "text": "Сменить роль",
      },
    ],
  ],
}
`;
